Re-apply stretch fix

--- a/js/src/modals/CreateAccount/createAccount.css
+++ b/js/src/modals/CreateAccount/createAccount.css
@@ -16,6 +16,8 @@
 */
 
 .details {
+  width: 100%;
+
   .info {
     display: flex;
     flex-direction: row;
